fixed nav bar overlap

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -42,6 +42,7 @@ main {
   position: fixed;
   top: 0;
   width: 100vw;
+  z-index: 5;
 }
 
 footer {
